--- a/05 RestWithSpringBootUdemy VO Pattern/src/main/resources/application.properties
+++ b/05 RestWithSpringBootUdemy VO Pattern/src/main/resources/application.properties
@@ -6,7 +6,7 @@ spring.datasource.password=admin123
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
 
 spring.jpa.hibernate.ddl-auto= update
-spring.jpa.show-sql=false
+spring.jpa.show-sql=true
 
-
+server.port=8081
 
